Fix style alignment.

--- a/web/public/stylesheets/style.less
+++ b/web/public/stylesheets/style.less
@@ -2,23 +2,29 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400);
 
 /* layout */
-.pure-g-r {
-    padding-left: 150px;
-    left: 0;
+@media(min-width: 768px) {
+    .pure-g-r {
+        padding-left: 150px;
+        left: 0;
+    }
+
+    nav {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+
+        left: 150px;
+        width: 150px;
+        margin-left: -150px;
+    }
 }
 
 nav {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-
-    left: 150px;
-    width: 150px;
-    margin-left: -150px;
-
     overflow-y: auto;
 
     .pure-menu {
+        padding-bottom: 20px;
+
         .pure-menu-heading {
             margin-bottom: 18px;
         }
@@ -60,9 +66,6 @@ nav {
             font-family: 'Cuprum', 'Helvetica', sans-serif;
             font-size: 28px;
             text-transform: capitalize;
-
-            &:hover {
-            }
         }
 
         li {
